fix alignment in login div

--- a/templates/style.css
+++ b/templates/style.css
@@ -49,4 +49,5 @@
   line-height: 40px;
   font-family: sans-serif;
   font-weight: bolder;
+  text-align: right;
 }
